# etf-research

./: .gitignore  Dockerfile  pyproject.toml
alembic/versions/: 5653af0ec7a7_add_scoring_and_pool_enhancement_tables.py
app/: config.py  main.py
app/api/: deps.py
app/api/v1/: analysis.py  auth.py  etfs.py  etl.py  indicators.py  market_data.py  pools.py  reports.py  scoring.py  screening.py  stats.py
app/core/: scheduler.py
app/data/indicators/: calculator.py  risk.py  scoring.py  technical.py
app/data/pipelines/: a_share.py  base.py
app/schemas/: etf.py  indicators.py  market_data.py  pool.py  report.py  scoring.py  screening.py
app/scripts/: init_etfs.py
app/services/: __init__.py  analysis_service.py  etf_service.py  indicator_service.py  market_data_service.py  pool_service.py  report_service.py  scoring_service.py  screening_service.py
app/templates/reports/: base.html  pool_weekly.html
app/tests/: test_scoring.py  test_screening.py
docs/superpowers/plans/: 2026-06-01-etf-research-core.md  2026-06-01-etf-web-dashboard.md
docs/superpowers/specs/: 2026-06-01-etf-research-core-design.md  2026-06-01-etf-web-dashboard-design.md
reports/: credentials.md
scripts/: init_demo_data.py
web/src/: App.tsx  routes.tsx
web/src/api/: analysis.ts  auth.ts  client.ts  etf.ts  index.ts  market.ts  pool.ts  report.ts  score.ts  screen.ts  stats.ts
web/src/components/: AppLayout.tsx  CategoryPie.tsx  CorrelationHeatmap.tsx  ETFCodeTag.tsx  IndicatorCard.tsx  KLineChart.tsx  ReturnCurve.tsx  ReturnTag.tsx  ScoreBar.tsx  ScoreRadar.tsx
(+26 files in other folders)
